{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 11,
  "lineage": "6b9c982f-8b43-5ee8-0d0d-6dd7a811834c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c8dd7873-08e3-4109-b6ea-05a6276a5927/resourceGroups/mh-rg/providers/Microsoft.Network/networkInterfaces/mh-nic",
            "internal_domain_name_suffix": "gerdniawupcuvig0zwfpzxx4ke.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c8dd7873-08e3-4109-b6ea-05a6276a5927/resourceGroups/mh-rg/providers/Microsoft.Network/virtualNetworks/mh-vnet/subnets/mh-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-1E-52-28-B8-5C",
            "name": "mh-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "mh-rg",
            "virtual_machine_id": "/subscriptions/c8dd7873-08e3-4109-b6ea-05a6276a5927/resourceGroups/mh-rg/providers/Microsoft.Compute/virtualMachines/myVM"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c8dd7873-08e3-4109-b6ea-05a6276a5927/resourceGroups/mh-rg/providers/Microsoft.Network/networkSecurityGroups/mh-sg",
            "location": "westeurope",
            "name": "mh-sg",
            "resource_group_name": "mh-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mh-nsr",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c8dd7873-08e3-4109-b6ea-05a6276a5927/resourceGroups/mh-rg/providers/Microsoft.Network/networkSecurityGroups/mh-sg/securityRules/mh-nsr",
            "name": "mh-nsr",
            "network_security_group_name": "mh-sg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "mh-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.sg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c8dd7873-08e3-4109-b6ea-05a6276a5927/resourceGroups/mh-rg/providers/Microsoft.Network/virtualNetworks/mh-vnet/subnets/mh-subnet",
            "name": "mh-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mh-rg",
            "virtual_network_name": "mh-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a0362231-a316-4ac5-a0da-cd8afcdefe54",
            "id": "/subscriptions/c8dd7873-08e3-4109-b6ea-05a6276a5927/resourceGroups/mh-rg/providers/Microsoft.Network/virtualNetworks/mh-vnet",
            "location": "westeurope",
            "name": "mh-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "mh-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/c8dd7873-08e3-4109-b6ea-05a6276a5927/resourceGroups/mh-rg/providers/Microsoft.Network/virtualNetworks/mh-vnet/subnets/mh-subnet",
                "name": "mh-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}